<resources>
    <string name="app_name">SapiAdveriserAndroidProject</string>
    <string name="FirstName">First Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="app_name1">Sapi Advertiser</string>
    <string name="sign_in">Sign In</string>
    <string name="to_Registration">Do you have an account? If not Sign Up</string>
    <string name="title">Title</string>
    <string name="short_description">Short Description</string>
    <string name="long_description">Long Description</string>
    <string name="location_text">Location Text</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SingUp" />
    <string name="Login" />
    <string name="sign_out">Sign_Out</string>
    <string name="email">emailAddress</string>
    <string name="verification_code">GET VERIFICATION CODE</string>
    <string name="title_activity_listing_advertisment">ListingAdvertismentActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_advertisement">AdvertisementActivity</string>
    <string name="title_home">Home</string>
    <string name="title_add">" New Ad"</string>
    <string name="title_user">User</string>
    <string name="add">ADD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
</resources>
